--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,8 @@
 	<meta name='copyright' content='FCOO'>
 	<meta name='owner' content='FCOO'>
 
-  <link  href="bower_components.css" rel="stylesheet">	
-  <link  href="demo.css" rel="stylesheet">	
+  <link  href="bower_components.css" rel="stylesheet">
+  <link  href="demo.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,31 +18,31 @@
 	<div id="zoom" style="width: 160px; height: 20px"></div>
 
 
-	
-	
+
+
 	<script src="bower_components.js"></script>
 	<!-- <script src="../bower_components/leaflet/dist/leaflet-src.js"></script> -->
 	<script src="../src/leaflet-zoom-modernizr.js"></script>
 
-	
-	
+
+
 	<script>
 		//Set default path to leaflet icon images
 		L.Icon.Default.imagePath = "\images";
 
 		var center				= [56.1020, 11.2782]
 				centerLatLng	=	L.latLng( center ),
-				demoDivIcon = L.divIcon({className: 'demo-marker', iconSize:null, iconAnchor:null});			
+				demoDivIcon = L.divIcon({className: 'demo-marker', iconSize:null, iconAnchor:null});
 
-		
-		var map = L.map('map', {minZoom:1, maxZoom:20}).setView(center, 6);
+
+		var map = L.map('map', {minZoom:1, maxZoom:20, zoomSnap: 0.25, zoomDelta: 0.25}).setView(center, 6);
 		L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			maxZoom: 16,
        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors</a>'
      }).addTo(map);
 		map.on('zoomend', function( e ){ document.getElementById("zoom").innerHTML = 'zoom = '+this.getZoom(); }, map);
 
-		L.marker(centerLatLng, {icon: demoDivIcon}).addTo(map);		
+		L.marker(centerLatLng, {icon: demoDivIcon}).addTo(map);
 
 
 	</script>
